modified:   common/decisions/Shanxi_decisions.txt 	new file:   common/dynamic_modifiers/SHX.txt 	modified:   common/ideas/Shanxi_ideas.txt 	modified:   common/national_focus/Shanxi.txt 	modified:   common/scripted_effects/CHINA_H_scripted_effects.txt 	modified:   common/scripted_effects/Shanxi_scripted_effects.txt 	modified:   events/HNN1.txt 	modified:   events/Shanxi.txt 	modified:   localisation/KR_Shanxi_l_simp_chinese.yml

--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -143,8 +143,32 @@
  SHX_purge_the_gmj:0 "清洗国民军"
  SHX_purge_the_gmj_desc:0 "自从冯玉祥与阎锡山闹掰后，旧有的阎冯二元体制就开始摇摇欲坠。据报道，国民军已经驻扎在了陕西，以及虽然两人仍持续就省政事务进行沟通，但所有人都能看见冲突之兆。阎锡山的官僚机构异常活跃，他们正孜孜不倦地解决问题，并为他们的山西主子大肆宣传。很明显，冯玉祥的赌博开始失败了——他正在失去对陕西的控制，农民开始反对他。阎锡山和其效忠派的一次决定性打击将彻底消除国民军的威胁！"
  #教育
+ Feng_taking_SHX_education_for_all: "重视基础教育"
+ Feng_taking_increase_school_taxes: "增加办学税"
+ Feng_taking_womens_education: "保护女性受教育权"
+ Feng_taking_clamp_down_traditional_roles: "淡化传统女性定位"
+ Yan_taking_emphasise_higher_education: "重视高等教育"
+ Yan_taking_crack_down_on_corruption: "严打教育腐败"
+ Yan_taking_foreign_experts: "外国科学人才"
+ Yan_taking_cultivate_foreign_aid_connections: "利用外援网络"
  SHX_educational_reform_mission_timer:0 "山西的教育改革进程"
  SHX_educational_reform_mission_timer_desc:0 "山西正着手对全省的教育体系进行重大改革。政府在此过程中作出的决定可能会加快或减慢改革进程，但改革完成前，山西无法完成“新知识阶层”国策。"
+ SHX_reinforce_primary_school:0 "加强基础教育"
+ SHX_reinforce_primary_school_desc:0 "新出台的一系列青年培养方案可以进一步充实我们的教学计划，山西军官学校和育英女校将成为其他学校的样板，体育运动将和歌唱、宗教学习一同成为教学重点。因战争导致的孤儿和被家庭弃养的孩子（相当一部分是私生子）会被托儿所收养，以免他们受流落街头之苦，年龄稍长的孩子会被送到孤儿院中接受初等教育，并学习经商相关的知识。也许我们应该恢复国民军时期创立的旧“平民学校”，让政府官员都到大街上去给玩闹的孩子讲课，推动扫盲。"
+ SHX_increase_school_taxes:0 "增加办学税"
+ SHX_increase_school_taxes_desc:0 "山西历来将地方税收用于资助学校，有利于缩小贫富差距。话虽如此，我省资金仍然非常短缺，需要更多财路相助。我省扩大了的教育规模产生的资金空缺亟需新财源填补，并要一同推出精巧的税收计划：广告税、进口税、谷物羊毛特别税、载货税、高额烟草税和针对外国商店的赋税。这一揽子措施必然会引发些许不满，但小的们会确保其得到落实。毕竟，这都是为了孩子好！"
+ SHX_clamp_traditional_roles:0 "淡化传统女性定位"
+ SHX_clamp_traditional_roles_desc:0 "虽然性别平等事业已获得长足发展，山西仍是个相当保守的地方。妇女裹脚陋习知道最近才在全省得到彻底废止，还有许多人仍受家庭主妇角色的束缚——肩负妥善使用家产并保持家庭整洁自足的责任。这一切应当改变，唯有大量设立妇女组织并鼓励妇女参与劳动，才能让十年计划真正实现山西的现代化。"
+ SHX_womens_college:0 "妇女大学教育"
+ SHX_womens_college_desc:0 "山西的女性教育拥有一段曲折的历史。虽然阎督理本人支持女性接受初等教育，但他认为没有必要让她们接受更多的教育，因为这些教育无助于她们操持家务。在遭到强烈抗议后，他才退步允许女性上大学，少数幸运的女子得以与男性一同就学。随着十年计划的重启，这一切都在经历迅速的变化。在太原的女子职业工厂中，学习纺纱、织布和写作等行业技能的学生数量激增，然而许多人仍呼吁开办更多的学校。山西政府对女性教育的立场进行了整体的转向，他们希望能有更多的工人充当新开办的工厂与商店的劳动力。事实上，许多人将社会主义国家的成功归功于女性的解放，虽然山西在实现真正平等上仍然有很长的一段路要走。"
+ SHX_eliminate_academic_corruption:0 "消灭学术腐败"
+ SHX_eliminate_academic_corruption_desc:0 "山西教师的薪资是出了名的低，山西许多最聪明的人都（因为自己工资过低）选择加入官僚机构，而不是成为山西众多默默无名的教师之一。这导致了严重的腐败现象，老师和教授们经常参与赌博、敲诈家长、出售考试答案、偷窃设备等恶性，并且他们经常缺席。提高工资、加强监督和提升精神面貌对我们实现现代化省级教育至关重要。"
+ SHX_cultivate_youthful_elite:0 "培育青年菁英"
+ SHX_cultivate_youthful_elite_desc:0 "上一代有许多山西学生出国留学，从海外带回了激进、愚蠢的想法。他们被宠坏了，大部分出国留学的项目也因此废止。本省政府的目标，是培养一批出身寒门，能忠于督理思想，愿意进行合理变革的新社会精英。在阎督理的侄子梁化之的领导下，这支新先锋军将带领山西走向未来！"
+ SHX_cultivate_foreign_aid_connections:0 "利用外援网络"
+ SHX_cultivate_foreign_aid_connections_desc:0 "境外援助对我省发展意义重大，而洋人和接受西方教育的中国人也对我省现代化事业至关重要。例如，约翰·杜威就被认为是最初山西公共教育改革的提出者之一。\n\n我们应审视自己手上还有多少人脉并与之合作，以获得资助、训练员工、保持良好国际形象。而且，我们得花时间好好反思，从这些外国人身上学到些什么，摆脱中国知识分子只读历史、哲学、艺术和儒学的过时习气。最后，这大多是靠我们自己的努力，向别人学习也并不可耻。"
+ SHX_expand_research_Beijing:0 "与北京学术合作"
+ SHX_expand_research_Beijing_desc:0 "在1933年和1935年，正值十年计划开始之初，晏阳初曾光临我省，视察我们教育工作的进展，这是我们至高无上的荣幸。这标志着我们与中央政府的教育机构之间有限但仍存的关系达到了顶峰。赵丕廉与任之恭（特别是后者）强调，这种合作关系可以更进一步，如果山西大学里的学者可以与华北三大名校，即南开大学、北京大学与清华大学的学者相互沟通，那山西大学很快能追上他们的脚步。这个梦想看似遥远，但只要我们下定决心，投入足够的资金，就一定能实现。"
  #农业
  SHX_feng_taking_SHX_peasant_deal: "发动农民"
  SHX_feng_taking_SHX_control_peasants: "剪除乡绅"
@@ -317,6 +341,14 @@
  SHX_tongpu_railway_tooltip: "这将新建一条大延铁路（从北到南）"
  SHX_grand_state_project_tooltip: "山西现在将开始建设一个§G汽车制造厂§!或者一个§Y大型炼钢厂。§!"
  SHX_Education_Reform_Complete_Tooltip: "我们现在可以选取§Y“新知识阶层”§!并推进教育国策树"
+ SHX_education_for_all_completed: "冯玉祥已经完成重视基础教育"
+ SHX_increase_school_taxes_completed: "冯玉祥已经完成增加办学税"
+ SHX_feng_womens_education_completed: "冯玉祥已经完成保护女性受教育权"
+ SHX_clamp_down_traditional_roles_completed: "冯玉祥已经完成淡化传统女性定位"
+ SHX_yan_crack_down_on_corruption_completed: "阎锡山已经完成严打教育腐败"
+ SHX_yan_foreign_experts_completed: "阎锡山已经完成外国科学人才"
+ SHX_yan_cultivate_foreign_aid_connections_completed: "阎锡山已经完成培养外援网络"
+ SHX_education_decision_unlock_tooltip: "§C这将会解锁更多的教育改革决议§!"
 
  shx.0.t:0 "晋系军阀"
  shx.0.d:0 "山西，傲然挺立之省，大禹治水之地，其历史悠久而辉煌。自古以来，这片隐于群山之中的土地接受着历朝历代的统治，如今又被置于晋系军阀的管辖之下。虽名为晋系，该军阀却仅控制着山西西部以及陕西的部分地区。德高望重、老谋深算的阎锡山统领着这片土地，自辛亥革命时起便一直担任山西督理一职。他雄心勃勃、旨在实现山西现代化的方案，为其本人赢得了“模范督理”的美称。\n\n阎锡山曾是中国北方权力纷争的参与者，通过先后支持袁世凯、段祺瑞二人，他成功在日益险恶的政治环境下稳固了统治。然而，吴佩孚与曹锟带领的直系于1928年大获胜利，本已垂死的北洋政府得以苟延残喘。张作霖撤回关外，冯玉祥则带着国民军投奔阎锡山。为对抗日益强大的直系势力，两位旧敌被迫握手言和，接受清廷复辟以换取北京承认阎锡山的老师赵戴文的督理职位。在目睹北伐与第四次直奉战争的灾难之后，山西两大铁腕人物誓要东山再起，一雪旧仇，但是山西的土地只能有一位领袖。"
@@ -381,6 +413,9 @@
  shx.edu.2.t:0 "任之恭归乡！"
  shx.edu.2.d:0 "中国接受过最高等教育的人有一大批是在国外接受的教育，这反映了国家在百年国耻中是何等地衰弱。这些留洋学生要么在外资公司任职，要么在沿海享受更舒适的生活，享受西式的奢靡。山西省政府就曾经资助过这么一些学生留学，但归国的学生却表现出十分的叛逆并彻底迷上了西方的生活。山西因此着重于培养国内的学生，并取得了惊人的成功。\n\n在山西推行教育改革后，国民师范学校校长和实际上的教育部长赵丕廉对外公布山西大学正在招聘师资。响应的人寥寥无几，优秀的老师更是屈指可数，但来自北京清华大学的学者任之恭却从中脱颖而出。\n\n任之恭出生于山西，家境清贫，先后在私塾与沁源县小学读书。1921年，15岁的他被清华大学录取，之后的几年内，他先是在麻省理工学院和宾夕法尼亚大学学习，后又获得了哈佛大学的物理学博士学位。这样一位杰出的学者可谓千载难逢，可遇不可求，但任之恭表示他为我们的爱国主义精神和我们为改革付出的巨大努力所感动（少不了我们慷慨的薪资从中推波助澜）。作为一名教师，任之恭的工作可谓艰巨，山西大学的图书馆都因为缺少资金关闭了。\n\n山西的大部分大学基本只教技术性的东西而不教理论，晋系当局也对一名来自北京的学者表现出充分的不信任。这个年轻人能否真的能实现山西的教育之梦，我们拭目以待。"
  shx.edu.2.a:0 "可敬的汉子。"
+ shx.edu.8.t:0 "乡村教育实验学校"
+ shx.edu.8.d:0 "在十年计划开始的时候，阎锡山推论称中国在许多方面都很落后——农民愚昧无知，而中国许多有学问的人更关注经典和哲学，而不是实用科学，他们陷入了徒然的傲慢之中。他的解决方案是创建特殊的农业学校，以取代傲慢的文官监督被压迫的农民的旧制度，从而拯救中国的农业。\n\n第一所实验学校的学员来自农民和知识分子阶层，他们被称为“学徒”，而不是学生，这是为了培养他们的谦卑和没有偏见的态度，使他们能够与农民一起工作。他们被鼓励参与当地生活，参加当地的庆典，出演戏剧，轮流为农民提供问诊服务。在这个地区，社会主义受到了控制，使该地区忠于政府。该学校甚至有一份官方期刊，名为“新村”，突出了它所体现的进步梦想。\n\n现在，[Root.GetLeader]希望扩大这个项目，并在整个省份建造更多像这样的学校。当然，在未来这将面临许多困难，部分原因无疑是对这样的学校是监管不如原来的学校那么严格。但如果成功了，它们将成为中国农业改革的典范！"
+ shx.edu.8.a:0 "真正的进步。"
 
  shx.agri.1.t:0 "山西土改"
  shx.agri.1.d:0 "山西的农业沿河分布，河流在山谷间留下了一层又一层的累积物。这个多山省份的土地质量不高，农业多集中在南部的汾河流域、中部的太原盆地还有北部的滹沱河流域与大同盆地。尽管大部分地区都难以实行佃农制，但在土地肥沃的区域，佃农制加剧了不平等，滋长了民怨，增强了乡绅们的统治。\n\n起初阎锡山大力支持投资农村，认为此举能够扭转山西对外的贸易逆差，而他熟读的儒家经典也往往充斥着重农思想。但他想从乡绅的手中收回一些对乡村的控制时，即便是他老家的人也不待见他了。乡绅们因为自身的利益反对改革，越来越多的佃农也在国民军到来之后隐约地支持国民军。\n\n过去对山西农业的改革得失参半，尽管目标远大，但自1934年以来，山西每年都要历经大旱。虽然十年计划主要侧重工业化，但一切工业化的基础都是一个稳定的土地政策。为此深思熟虑之后，晋系决定推出一项改革。"
@@ -807,6 +842,13 @@
  SHX_narrow_railway_gauges:0 "窄轨铁路"
  SHX_yan_xishan_thought:0 "阎锡山思想"
 
+ SHX_model_province_taiyuan:0 "模范省的心脏"
+ SHX_model_province_taiyuan_desc:0 "太原是阎锡山政府的掌上明珠，长期受到省政府的高度偏爱。在我们的英明统治下，以进步改革为傲的太原已成为我省打造模范省形象以供他人膜拜的中心。"
+ SHX_eastern_shanxi_strikes_modifier:0 "晋东动乱"
+ SHX_eastern_shanxi_strikes_modifier_desc:0 "在山西不甘屈伏、一贯叛逆的军阀的刺激下，有争议的边境地区爆发了动乱。工资过低的工人、反租界的学生和目光短浅的督理阎锡山派出的（几乎可以肯定的）收了黑钱的活动家们挑起了大罢工。这严重破坏了我们开采宝贵矿产资源的工作，人群淹没了我们试图维持秩序的驻军。就目前而言，晋东是一片无主之地。"
+
+ SHX_experimental_school_concern:0 "乡村教育实验学校"
+ SHX_experimental_school_concern_desc:0 "作为十年计划的早期阶段项目，山西建立了一所“乡村教育实验学校”，该校的校董会由阎锡山、冯玉祥和赵戴文本人负责。这所学校在内部而言相当成功，它从1933年成立之始就吸纳了有着不同家景的学生，并提供了简单而先进的农业课程。这所学校有着相当理想主义的目标：它要打破阶级偏见，现代化农业教育并结合理论学习与实际田野工作，可谓是凌云之志。乡村教育实验学校在省内省外都被大力宣传，以彰显山西统治者的开明进步，有人认为“作为实施村级经济建设的基石，他们将会成为组织群众的先锋并让乡郊变得焕然一新”。将乡村教育实验学校视作“十年计划”中最杰出的成就可以让计划的名声上升到新的高度，但此学校是否真的名副其实（而不仅仅是另一个橱窗宣传），将会在未来几年里揭晓。"
  SHX_shanxi_automobile_company_concern:0 "西北汽车运输公司"
  SHX_shanxi_automobile_company_concern_desc:0 "西北汽运集团是十年计划中建设国家资本主义议程所结出的硕果。其作为一家由政府支持的企业，得到了省政府的大力支持。这个更现代的新项目与冯玉祥曾建立的项目同名，并继承了前身的精神，却与其前身有着鲜明对比，因为其并不面向外国市场，而是专注于国内生产。该公司生产了大量的汽车、卡车和其他机动车辆，同时政府希望让国内中产而不是外国富人在山西刚刚翻修好的道路上开车。尽管在其产品质量方面的政府宣传看起来有些可疑，但政府的宣传确实推动了公司销售额的增长（尽管主要是在省内而不是出口）和其产业规模的扩张。以更长远的目光来看，政府希望能在汽车行业复制硫酸盐厂、铁厂和机床厂等国家项目的成功——这些项目本身发展并不是特别好，但有助于为未来的工业化培养一支训练有素的产业工人队伍。如果运气好的话，有朝一日山西也能拥有自己的繁荣的汽车工业。"
  SHX_northwest_industrial_company_concern:0 "西北实业公司"
@@ -863,7 +905,7 @@
  SHX_Yan_In_Power:0 "阎氏政权"
  SHX_Feng_in_power:0 "冯玉祥政权"
 
- #开局
+#开局国策
  SHX_zhao_du_li_de_zui_hou_yi_nian:0 "赵省长的最后一年"
  SHX_zhao_du_li_de_zui_hou_yi_nian_desc:0 "转眼之间赵省长的两届省长任期已经到了最后一年，山西土皇帝阎锡山和外来者冯玉祥的矛盾已经愈发严峻，双方的摩擦从第一天起就从来没有停止过。一山难容二虎，山西的未来又将何去何从呢..."
  SHX_sheng_yi_hui:0 "与太原商会的密谈"
@@ -885,7 +927,7 @@
  SHX_feng_yu_yu_lai:0 "风雨欲来"
  SHX_feng_yu_yu_lai_desc:0 "黑色星期一、八省内战...赵省长的最后一年过得无比艰难，但这一切都将与他无关了。他将脱离掉这个也许被其他人无比垂涎的位置，退居幕后，去当一个智囊，或是去做点佛学研究。山西的政局就交给那个命定之人吧..."
 
- #经济
+#经济
  SHX_ji_xu_shi_nian:0 "继续十年规划方针"
  SHX_ji_xu_shi_nian_desc:0 "山西的变革即将来临，老百姓虽然不知道也不关心山西强人之间的政治把戏，但就算是他们也能察觉到。村长们晚上不赌博而在工作，活动家和宣传员频频四处宣传，太原来的县长们十分关切统计数字的真实性。甚至连外部人士也注意到了这一点——来自北京的投资者和境外的观察人士都注意到山西的动态，进行了大张旗鼓的访问。虽然山西自1936年以来一直在进行十年计划，但最近却有了新的紧迫感。这次变革真的来了，即使目前还不清楚会对谁有利，即使需要巨大的牺牲，但人们总是谨慎地怀揣着希望。"
 
@@ -908,7 +950,7 @@
  SHX_zhu_jian_wei_li:0 "铸剑为犁"
  SHX_zhu_jian_wei_li_desc:0 "阎锡山和冯玉祥等人早在本世纪10年代就意识到了复员职业培训的需求。士兵们必须学会必要的技能以在社会中养活自己，以免变成强盗。我们要规定士兵必须学会一门手艺才能退伍，还要设立一些讲习班来让老兵们在退伍前接受教育。"
  SHX_gai_ge_shan_xi_da_xue:0 "改革山西大学"
- SHX_gai_ge_shan_xi_da_xue_desc:0 "仅仅在五年之前，山西大学还只能称之为是个“度假胜地”，而非学府。学生和教师全然不顾学业，终日以赌博和结党为乐。可现在，一切都大不一样——师生再度拥有学习的积极性，而学校也获得了充足的资金。现如今，山西大学培养出的学子，完全足以胜任山西繁重的研究工作。在这片被黑暗笼罩的地方，阎锡山已经点燃了一支蜡烛。迟早有一天，他会带领全山西走出黑暗。"
+ SHX_gai_ge_shan_xi_da_xue_desc:0 "仅仅在五年之前，山西大学还只能称之为是个“度假胜地”，而非学府。学生和教师全然不顾学业，终日以赌博和结党为乐。可现在，一切都大不一样——师生再度拥有学习的积极性，而学校也获得了充足的资金。现如今，山西大学培养出的学子，完全足以胜任山西繁重的研究工作。在这片被黑暗笼罩的地方，[Root.GetLeader]已经点燃了一支蜡烛。迟早有一天，他会带领全山西走出黑暗。"
  SHX_fa_zhan_zhong_chan_jie_ji:0 "发展中产阶级"
  SHX_fa_zhan_zhong_chan_jie_ji_desc:0 "教育和农业领域的发展极大促进了山西的繁荣，了却省政府数十年来的希冀：新的城市专业人员群体为企业和地方发展带来了资金。虽然其中很多人来自过去诸如乡绅等特权阶层，但也有更多人成功脱贫。"
 
@@ -1058,6 +1100,42 @@
  SHX_qi_ye_gai_ge_desc:0 " "
  SHX_mo_shou_cheng_gui:0 "墨守成规的现代化"
  SHX_mo_shou_cheng_gui_desc:0 " "
+
+ #冯玉祥
+ SHX_feng_yu_xiang:0 "基督将军的归来"
+ SHX_feng_yu_xiang_desc:0 " "
+ SHX_jie_na_zuo_yi:0 "接纳左翼人士"
+ SHX_jie_na_zuo_yi_desc:0 " "
+ SHX_chong_hui_zheng_gui:0 "重回正轨"
+ SHX_chong_hui_zheng_gui_desc:0 " "
+ SHX_she_li_sheng_xian:0 "设立省宪"
+ SHX_she_li_sheng_xian_desc:0 " "
+ SHX_tu_di_ge_ming:0 "彻底土地革命"
+ SHX_tu_di_ge_ming_desc:0 " "
+ SHX_tui_jin_gong_ye_hua:0 "推进工业化"
+ SHX_tui_jin_gong_ye_hua_desc:0 " "
+ SHX_xiang_cun_yi_wu_jiao_yu:0 "资助乡村学子"
+ SHX_xiang_cun_yi_wu_jiao_yu_desc:0 " "
+ SHX_gai_zu_sheng_yi_hui:0 "改革省议会"
+ SHX_gai_zu_sheng_yi_hui_desc:0 " "
+ SHX_yu_tai_yuan_shang_hui:0 "与太原商会合作"
+ SHX_yu_tai_yuan_shang_hui_desc:0 " "
+ SHX_gai_ge_sheng_fu:0 "改革省府"
+ SHX_gai_ge_sheng_fu_desc:0 " "
+ SHX_fa_yang_she_hui_zheng:0 "宣扬社会正能量"
+ SHX_fa_yang_she_hui_zheng_desc:0 " "
+ SHX_tui_xing_sheng_jian_yun_dong:0 "推进乡建运动"
+ SHX_tui_xing_sheng_jian_yun_dong_desc:0 " "
+ SHX_tui_gao_fu_li_dai_yu:0 "提高福利待遇"
+ SHX_tui_gao_fu_li_dai_yu_desc:0 " "
+ SHX_gong_hui_ping_deng:0 "工会公平法案"
+ SHX_gong_hui_ping_deng_desc:0 " "
+ SHX_shan_xi_de_wei_lai:0 "山西省的未来"
+ SHX_shan_xi_de_wei_lai_desc:0 " "
+ SHX_jin_bu_zhi_sheng:0 "进步之省"
+ SHX_jin_bu_zhi_sheng_desc:0 " "
+ SHX_xian_dai_hua_mo_fan:0 "现代化模范省"
+ SHX_xian_dai_hua_mo_fan_desc:0 " "
 
  SHX_recruitment_problem:0 "征兵问题"
  SHX_recruitment_problem_desc:0 "山西地狭人稀、兵源不足，这让我军的征兵工作难以开展。我们必须大力招募新兵来缓解这个问题。"
