modified:   common/decisions/Shanxi_decisions.txt 	modified:   common/national_focus/Shanxi.txt 	modified:   events/Shanxi.txt 	modified:   localisation/KR_Shanxi_l_simp_chinese.yml

--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -33,7 +33,7 @@
  SHX_zhao_dai_wen: "赵戴文"
  SHX_yan_xishan: "阎锡山"
  SHX_yan_xishan_starting_leader_desc:0 "山西督理阎锡山从各种意义上来讲都可谓是位传奇人物：他出身于一个家道中落、囊空如洗的富裕家庭，他不仅是一位曾驱除满洲鞑虏的山西人之子，同时也是将山西省视为掌上明珠的模范督理。阎锡山战胜了冯玉祥及狡诈的国民军，挫败了他们推翻阎督理数十年统治的企图，并牢牢控制着山西。阎锡山希望这是他统一大业的第一步：他将摧毁腐朽的北京政权，荡平各路军阀。阎锡山将会成为中国的慈父，一位睿智严明的慈父，并引领她结束百年国耻。\n\n阎锡山出生于山西的一个商贾世家之中，生而富贵的他在传统儒家教育下长大成人。他的教育背景及阎家后来家道中落也许就是他与乡绅之间的同盟关系脆弱不堪的原因。阎锡山在考入山西武备学堂后不久到日本进修了数年。他在当地留学时可谓大开眼界，他见识了一个集权威权政府如何引领社会快速走向现代化。他也十分欣赏日军的纪律以及“武士道”精神，并对日本在日俄战争中的胜利赞不绝口。在德意志帝国于世界大战中获胜后，阎锡山对威权统治变得愈发笃信，更加倾向走上专制之路。阎锡山在1911年辛亥革命爆发后成为了山西督理，但他在1913年时与孙中山分道扬镳。虽然阎锡山希望看见中国重归统一，但他对中央政府削弱其权势的连番尝试仍深感不安。阎锡山的山西现代化计划让他名声大振，但一些观察家怀疑地指出，相当多的计划其实未能取得有意义的成果。如今，赶走了国民军的阎锡山重归台前，这一次山西王再一次手握整个山西。"
- SHX_yan_xishan_commander_desc: "§Y陆军将领介绍\n生于：§!§g1883年10月8日；大清帝国、山西省忻州§!\n§Y派系：§!§g阎派§!\n§Y军旅生涯：§!§g阎锡山的父亲是一位富裕的银行家兼商贾，而他则在省内精英预期的传统儒家教育下长大成人。由于山西繁荣一时银行业的开始萎缩，年轻的阎锡山（与大多数人一样）入读了太原的军事学堂以便确保未来生活稳定。他在1904时到东京接受高等军事教育，他在海外看到的急速发展、威权主义和军国主义思想为他带来了巨大的启发。阎锡山后更会了见孙中山和加入同盟会，他曾协助筹备成立一个“铁血”社团，并在其后与其他革命党人一同加入了“敢死队”。在回国后，阎锡山在山西担任指挥官，这让他得以在辛亥革命中推翻当地的保皇派。\n\n阎锡山的军事与组织能力让他成为了山西都督，并拥有实际上超越民政长的地位。他避过了中央恶人多次集权山西的尝试，先是袁世凯后是吴佩孚。尽管阎锡山要求手下的指挥官利用最新的军事科技及战术，但他在担任前线指挥官时却倾向寸土必守和进行幕后微操。鉴于阎锡山在第四次直奉战争中无法与直系抗衡以及在政务系统中身兼数职，不少人都认为在想阎长官是否应该继续担任前线指挥官。但其他人指出，从“模范督理”所展现的足智多谋看来，他出任前线指挥官一事理所当然。\n\n§Y重要信息：所谓“阎派”的核心人物，阎督理在山西省内的影响力无可比拟。§!"
+ SHX_yan_xishan_commander_desc:0 "§Y陆军将领介绍\n生于：§!§g1883年10月8日；大清帝国、山西省忻州§!\n§Y派系：§!§g阎派§!\n§Y军旅生涯：§!§g阎锡山的父亲是一位富裕的银行家兼商贾，而他则在省内精英预期的传统儒家教育下长大成人。由于山西繁荣一时银行业的开始萎缩，年轻的阎锡山（与大多数人一样）入读了太原的军事学堂以便确保未来生活稳定。他在1904时到东京接受高等军事教育，他在海外看到的急速发展、威权主义和军国主义思想为他带来了巨大的启发。阎锡山后更会了见孙中山和加入同盟会，他曾协助筹备成立一个“铁血”社团，并在其后与其他革命党人一同加入了“敢死队”。在回国后，阎锡山在山西担任指挥官，这让他得以在辛亥革命中推翻当地的保皇派。\n\n阎锡山的军事与组织能力让他成为了山西都督，并拥有实际上超越民政长的地位。他避过了中央恶人多次集权山西的尝试，先是袁世凯后是吴佩孚。尽管阎锡山要求手下的指挥官利用最新的军事科技及战术，但他在担任前线指挥官时却倾向寸土必守和进行幕后微操。鉴于阎锡山在第四次直奉战争中无法与直系抗衡以及在政务系统中身兼数职，不少人都认为在想阎长官是否应该继续担任前线指挥官。但其他人指出，从“模范将军”所展现的足智多谋看来，他出任前线指挥官一事理所当然。\n\n§Y重要信息：所谓“阎派”的核心人物，阎大师在山西省内的影响力无可比拟。§!"
  SHX_shang_zhen: "商震"
  SHX_shang_zhen_intro:0 "商震毕业于保定军校，很早就参加了同盟会的革命活动，还在流亡日本期间见过孙中山。20世纪初，他的所作所为确立了共和派领袖的资历，早年间他与冯玉祥交善，因此免于一死，但他还是在1916年投入了当时的新督理——阎锡山麾下，随之到了山西，协助省军改革，还参与了包括反冯玉祥在内的多次冲突。\n\n在整个20年代，他的表现证明了自己是个有能力的军官，但在晋系内部，他的忠诚度受到了怀疑，因为在30年代，他还一直同情国民党，既不愿加入阎锡山，也不愿加入冯玉祥。"
  SHX_shang_zhen_hos_desc:0 "§Y领袖介绍\n生于：§!1888年9月21日；大清帝国、浙江省绍兴县\n§Y政治生涯：§!$SHX_shang_zhen_intro$\n\n看来，他坚持中立是正确的，即使阎冯中的一方取胜，胜者最终也没能成为山西的主人。现在，外部势力选择任命商震统治山西，对他，以及与他共事的国民党军官和支持他的山西人抱以信任。商震会践行三民主义，还是仅仅换一种方式实行残酷独裁，目前还不得而知。"
@@ -251,10 +251,14 @@
  SHX_hire_qie_labour2_desc:0 "与山西的工人相比，由于邻近天津和北京，直隶省的劳工更加有技能和知识。随着中国的经济陷入混乱，让我们以有利可图和便宜土地来邀请他们，作为换取他们劳动的代价。"
  SHX_military_construction_crews:0 "雇佣军事建设人员"
  SHX_military_construction_crews_desc:0 "我们的军事基础设施虽然从中国的标准来说相当现代化，但是肯定能接受从邻近的直隶省来的军事制造工厂的工人和职员的援助。因为他们的设施还要显著地更加先进（由于他们以往与德国人的合作），让我们看看我们能从他们那里学到什么。"
+ SHX_beijing_bribes:0 "北京的贿赂"
+ SHX_beijing_bribes_desc:0 "人人都知道来自北京的代理人经常到访山西，他们有时受中央政府之命，有时由企业董事会派出。他们登门时会带同厚礼，然而，他们也可能会损害我们那张脆弱的恩庇网，因为这帮人以其资金为本，威胁要开出比督理还高的价！"
  SHX_build_a_mill_dec:0 "建造大型炼钢厂"
  SHX_build_a_mill_dec_desc:0 "想象一下吧，一个巨大的钢铁铸造厂，拥有超过五百万的投资，甚至能与日本在东北建设的那些工厂相媲美。其蓝图就摆在我们面前，建成后预计每日可生产240吨焦炭，160吨铸铁，240吨平炉钢以及150吨钢轨。换句话说，一年就能生产43000吨钢铁——这是一个真正的山西工程奇迹。我们不能再犹豫不决了，我们也不会再等待。荣光就在前方等着我们！"
  SHX_build_a_factory_dec:0 "建造现代汽车厂"
  SHX_build_a_factory_dec_desc:0 "试想一下，在太原有一座繁荣、现代化且清洁的汽车厂，生产大量的轿车、卡车、拖拉机和其他车辆，满足全省乃至全中国的需求！它可以与底特律汽车厂并驾齐驱，甚至让亨利·福特都羡慕嫉妒恨！很多人说这只是痴人说梦，但随着我们不断增长的信心，我们将开始投资汽车工业，在工业化道路上一往无前。光明的未来就在眼前！"
+ SHX_distribute_research_grants:0 "发放科研津贴"
+ SHX_distribute_research_grants_desc:0 "我们现在有能力为华北更为广泛的学术交流做出贡献，这也许就是最能说明我们在教育改革方面所取得进展的标志了。尽管太原大学与北京的同类大学相比可能还是有点不尽人意，但他们已经进行了全面改革，配备了必要的基础设施，可以开展先进的科学、工程和工业研究。他们需要的只是一点推动力，通过发放一些额外的资金和赠款，我们可以大大提高他们的产出。"
 
  SHX_QIE_shanxi_diplomacy_decisions_category:0 "我们在山西的利益"
  SHX_QIE_shanxi_diplomacy_decisions_category_desc:0 "晋系军阀，它的崇山峻岭和两支军队，一直都是我们的麻烦所在。我们有不少手段令其保持顺从，并且§G随着形势发展，更多手段将摆上台面§!。维持我们的影响力对保卫西北十分重要。\n\n\n\n晋系能否反抗我们，关键在于其§Y战争支持度§!。要想保持国家统一，我们就万不可让他们的§Y战争支持度§!增长得太高。晋系的§Y战争支持度§!目前为[?SHX.has_war_support|%R0]\n\n除此之外，还要警惕持革命思想、同我们对立的国民军不断增长的影响力。§!§C当前，国民军[SHX.GMJ_coup_strength]。§!§!\n\n鉴于过去的敌意，晋系军阀虽然名义上服从我们，实际情况却令人难以放心。然而，八省联合崩溃后的局势使我们很难找到机会，去改变与晋系及其领导层之间的关系。在这场互动中，太原和北京将分别操纵局面，使其对己方更加有利。保证我方§G影响力处于高位§!，对方§Y战争支持度处于低位§!，同时将§R国民军§!排除在权力中心之外，如此方能让晋系同我们的利益保持一致。\n\n[Root.GetNameDefCap][Root.GetFlag]拥有[?SHX.SHX_QIE_influence_variable|0]%§H经济影响力§!"
@@ -304,6 +308,8 @@
  SHX_QIE_spend_medium_tooltip: "§c北京的影响力§!§Y降低§!§G10%§!"
  SHX_QIE_spend_large_tooltip: "§c北京的影响力§!§Y降低§!§G15%§!"
  SHX_QIE_spend_giga_tooltip: "§c北京的影响力§!§Y降低§!§G30%§!"
+ SHX_QIE_eco_invest_choice_small_texticon: "[QIE.GetFlag] 5%或者£pol_power [?SHX_pay_with_pp_small_variable]"
+ SHX_QIE_eco_invest_choice_small_texticon_blocked: "[QIE.GetFlag] §R5%§!或者£pol_power §R[?SHX_pay_with_pp_small_variable]§!"
  SHX_QIE_eco_invest_choice_medium_texticon: "[QIE.GetFlag] 10%或者£pol_power [?SHX_pay_with_pp_medium_variable]"
  SHX_QIE_eco_invest_choice_medium_texticon_blocked: "[QIE.GetFlag] §R10%§!或者£pol_power §R[?SHX_pay_with_pp_medium_variable]§!"
  SHX_QIE_eco_invest_large_texticon: "[QIE.GetFlag] 15%影响力"
@@ -349,6 +355,7 @@
  SHX_yan_foreign_experts_completed: "阎锡山已经完成外国科学人才"
  SHX_yan_cultivate_foreign_aid_connections_completed: "阎锡山已经完成培养外援网络"
  SHX_education_decision_unlock_tooltip: "§C这将会解锁更多的教育改革决议§!"
+ SHX_beijing_bribes_tt: "§Y选择这个决议会在90天内给我们一个地图外工厂，之后工厂会被移除。§!"
 
  shx.0.t:0 "晋系军阀"
  shx.0.d:0 "山西，傲然挺立之省，大禹治水之地，其历史悠久而辉煌。自古以来，这片隐于群山之中的土地接受着历朝历代的统治，如今又被置于晋系军阀的管辖之下。虽名为晋系，该军阀却仅控制着山西西部以及陕西的部分地区。德高望重、老谋深算的阎锡山统领着这片土地，自辛亥革命时起便一直担任山西督理一职。他雄心勃勃、旨在实现山西现代化的方案，为其本人赢得了“模范督理”的美称。\n\n阎锡山曾是中国北方权力纷争的参与者，通过先后支持袁世凯、段祺瑞二人，他成功在日益险恶的政治环境下稳固了统治。然而，吴佩孚与曹锟带领的直系于1928年大获胜利，本已垂死的北洋政府得以苟延残喘。张作霖撤回关外，冯玉祥则带着国民军投奔阎锡山。为对抗日益强大的直系势力，两位旧敌被迫握手言和，接受清廷复辟以换取北京承认阎锡山的老师赵戴文的督理职位。在目睹北伐与第四次直奉战争的灾难之后，山西两大铁腕人物誓要东山再起，一雪旧仇，但是山西的土地只能有一位领袖。"
