modified:   common/decisions/Shanxi_decisions.txt 	modified:   localisation/KR_Shanxi_l_simp_chinese.yml

--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -259,6 +259,12 @@
  SHX_build_a_factory_dec_desc:0 "试想一下，在太原有一座繁荣、现代化且清洁的汽车厂，生产大量的轿车、卡车、拖拉机和其他车辆，满足全省乃至全中国的需求！它可以与底特律汽车厂并驾齐驱，甚至让亨利·福特都羡慕嫉妒恨！很多人说这只是痴人说梦，但随着我们不断增长的信心，我们将开始投资汽车工业，在工业化道路上一往无前。光明的未来就在眼前！"
  SHX_distribute_research_grants:0 "发放科研津贴"
  SHX_distribute_research_grants_desc:0 "我们现在有能力为华北更为广泛的学术交流做出贡献，这也许就是最能说明我们在教育改革方面所取得进展的标志了。尽管太原大学与北京的同类大学相比可能还是有点不尽人意，但他们已经进行了全面改革，配备了必要的基础设施，可以开展先进的科学、工程和工业研究。他们需要的只是一点推动力，通过发放一些额外的资金和赠款，我们可以大大提高他们的产出。"
+ SHX_sell_shanxi_cotton:0 "出售晋棉"
+ SHX_sell_shanxi_cotton_desc:0 "由于我省农业产量较大，有能力种植更多的宝贵经济作物，特别是棉花。这些作物出口使我们能够增加流入资金，这些资金可以用于推进山西的其他项目。"
+ SHX_expand_coal_sale:0 "扩大煤矿出口"
+ SHX_expand_coal_sale_desc:0 "煤炭是经济的命脉所在。近年来，太行山脉的煤矿开采力度逐渐加大。中国经济正日益复苏，工业生产对煤炭的需求量也水涨船高。要想重夺全国最大煤炭产区的地位，我们就必须满足这一需求量，并击败山东的竞争对手们。"
+ SHX_crackdown_foreign_agitators:0 "镇压外来煽动者"
+ SHX_crackdown_foreign_agitators_desc:0 "我们必须定期清理门户以保护山西不受省外阴谋破坏。虽然大多数的省府人员都在收各种形式的贿，但一系列针对问题赂款来源的突击搜查可以发出有关忠诚的清晰信号！"
 
  SHX_QIE_shanxi_diplomacy_decisions_category:0 "我们在山西的利益"
  SHX_QIE_shanxi_diplomacy_decisions_category_desc:0 "晋系军阀，它的崇山峻岭和两支军队，一直都是我们的麻烦所在。我们有不少手段令其保持顺从，并且§G随着形势发展，更多手段将摆上台面§!。维持我们的影响力对保卫西北十分重要。\n\n\n\n晋系能否反抗我们，关键在于其§Y战争支持度§!。要想保持国家统一，我们就万不可让他们的§Y战争支持度§!增长得太高。晋系的§Y战争支持度§!目前为[?SHX.has_war_support|%R0]\n\n除此之外，还要警惕持革命思想、同我们对立的国民军不断增长的影响力。§!§C当前，国民军[SHX.GMJ_coup_strength]。§!§!\n\n鉴于过去的敌意，晋系军阀虽然名义上服从我们，实际情况却令人难以放心。然而，八省联合崩溃后的局势使我们很难找到机会，去改变与晋系及其领导层之间的关系。在这场互动中，太原和北京将分别操纵局面，使其对己方更加有利。保证我方§G影响力处于高位§!，对方§Y战争支持度处于低位§!，同时将§R国民军§!排除在权力中心之外，如此方能让晋系同我们的利益保持一致。\n\n[Root.GetNameDefCap][Root.GetFlag]拥有[?SHX.SHX_QIE_influence_variable|0]%§H经济影响力§!"
