modified:   common/decisions/Shanxi_decisions.txt 	modified:   common/ideas/Shanxi_ideas.txt 	modified:   common/national_focus/Shanxi.txt 	modified:   common/scripted_effects/Shanxi_scripted_effects.txt 	modified:   events/League_of_Eight_Provinces.txt 	modified:   events/Shanxi.txt 	new file:   gfx/event_news_pictures/SHX/SHX_yan_car.png 	new file:   gfx/event_news_pictures/SHX/SHX_yan_smile.png 	new file:   history/units/SHX.txt 	modified:   interface/SHX_event_pictures.gfx 	modified:   localisation/KR_Shanxi_l_simp_chinese.yml

--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -270,11 +270,16 @@
  SHX_QIE_shanxi_diplomacy_decisions_category_desc:0 "晋系军阀，它的崇山峻岭和两支军队，一直都是我们的麻烦所在。我们有不少手段令其保持顺从，并且§G随着形势发展，更多手段将摆上台面§!。维持我们的影响力对保卫西北十分重要。\n\n\n\n晋系能否反抗我们，关键在于其§Y战争支持度§!。要想保持国家统一，我们就万不可让他们的§Y战争支持度§!增长得太高。晋系的§Y战争支持度§!目前为[?SHX.has_war_support|%R0]\n\n除此之外，还要警惕持革命思想、同我们对立的国民军不断增长的影响力。§!§C当前，国民军[SHX.GMJ_coup_strength]。§!§!\n\n鉴于过去的敌意，晋系军阀虽然名义上服从我们，实际情况却令人难以放心。然而，八省联合崩溃后的局势使我们很难找到机会，去改变与晋系及其领导层之间的关系。在这场互动中，太原和北京将分别操纵局面，使其对己方更加有利。保证我方§G影响力处于高位§!，对方§Y战争支持度处于低位§!，同时将§R国民军§!排除在权力中心之外，如此方能让晋系同我们的利益保持一致。\n\n[Root.GetNameDefCap][Root.GetFlag]拥有[?SHX.SHX_QIE_influence_variable|0]%§H经济影响力§!"
  SHX_QIE_relief_for_shanxi:0 "黑色星期一救济一揽子协议"
  SHX_QIE_relief_for_shanxi_desc:0 "自从柏林股票市场大崩溃之后，我们已经长期为维持中国局势的稳定而疲于奔命，但最坏的已经过去了。不管如何，仍然有许多人和事需要我们的帮助，包括太原的商人和工业家。我们在山西的特工，在和王骧（一位富有同情心的山西高级官员）进行交谈之后表示，倘若我们能够提供大量的贷款和金融援助，山西的商界将会对此感激不已，并能够让[SHX.GetLeader]督理欠我们一笔债。"
+ SHX_QIE_court_influence_in_taiyuan:0 "朝廷在太原的影响力"
+ SHX_QIE_court_influence_in_taiyuan_desc:0 "剥去他们虚以委蛇的伪装后，军阀也只不过是一个庞大政治、军事和经济网络的中心罢了。更关键的是，这也意味着他可以被更庞大的力量所削弱，甚至于替换。虽然现在考虑消灭[SHX.GetLeader]还为时尚早。然而，不积跬步无以至千里。也许是一个倒霉的实业家和她的公司，又或许是天真的理想主义者和他的学生，抑或是久久盼望着晋升的军官，也有可能是早就心怀不满的地主和宗族，而这一切的一切，都是关系网中潜在的一颗颗钉子。虽然这或许要消耗巨大的财力，但我们很乐意花这笔钱。"
+ SHX_QIE_buyout_local_companies:0 "收购地方企业"
+ SHX_QIE_buyout_local_companies_desc:0 "山西政府已经准备向我们开放他们的经济，为我们从中牟利提供了极好的机会。这近十年以来，山西就一直维持着高度国有化的工业体系，并造成了商业的腐败和低效。在另一方面来说，他们又坐拥着极其优秀的工业化基础：随处可得的高品质煤矿，廉价劳动力和出色的基础设施。如今，虽然仍处于婴儿期，但他们已经开始工业化。我们可以组织国内和国外盟友的投资者，以及一些我们手头上的空格公司，来通过收购私有化国企和小企业牟利。"
 
  SHX_model_governor:0 "模范督理"
  SHX_model_governor_desc:0 "阎锡山能得到这一绰号要归功于段祺瑞，同时他对媒体（通常是国际媒体）面前的表演也为他赢得了一些声誉。他亲自指挥战斗的行为也为他博取了不少关注，也许让他当这个领袖是最合适的选择。"
  SHX_christian_general:0 "基督将军"
  SHX_christian_general_desc:0 "冯玉祥的绰号来自于他的基督教信仰和他用基督教道德观激励手下士兵的行为。冯玉祥本人就是国民军精神的具现。虽然他对基督教的虔诚和他对教义的理解深度备受争议，却也从未动摇他的热忱。"
+
  SHX_model_governor_tt: "修正§Y阎锡山§!：\n$MODIFIER_COMMAND_POWER_GAIN_MULT$：§G+25%§!"
  shx_education_yan_path: "§L山西决定高等教育优先§!"
  shx_education_feng_path: "§L山西决定普及教育优先§!"
@@ -362,6 +367,8 @@
  SHX_yan_cultivate_foreign_aid_connections_completed: "阎锡山已经完成培养外援网络"
  SHX_education_decision_unlock_tooltip: "§C这将会解锁更多的教育改革决议§!"
  SHX_beijing_bribes_tt: "§Y选择这个决议会在90天内给我们一个地图外工厂，之后工厂会被移除。§!"
+ SHX_QIE_court_influence_tooltip: "§C我们在山西的影响力稍有增长。这取决于太原对我们提议的接受程度§!"
+ SHX_QIE_buyout_companies_tooltip: "§C如果山西接受，他们将会获得一个减轻其工业负面效果的精神，并且我们的影响力会有§Y中等程度§!的增长。§!"
 
  shx.0.t:0 "晋系军阀"
  shx.0.d:0 "山西，傲然挺立之省，大禹治水之地，其历史悠久而辉煌。自古以来，这片隐于群山之中的土地接受着历朝历代的统治，如今又被置于晋系军阀的管辖之下。虽名为晋系，该军阀却仅控制着山西西部以及陕西的部分地区。德高望重、老谋深算的阎锡山统领着这片土地，自辛亥革命时起便一直担任山西督理一职。他雄心勃勃、旨在实现山西现代化的方案，为其本人赢得了“模范督理”的美称。\n\n阎锡山曾是中国北方权力纷争的参与者，通过先后支持袁世凯、段祺瑞二人，他成功在日益险恶的政治环境下稳固了统治。然而，吴佩孚与曹锟带领的直系于1928年大获胜利，本已垂死的北洋政府得以苟延残喘。张作霖撤回关外，冯玉祥则带着国民军投奔阎锡山。为对抗日益强大的直系势力，两位旧敌被迫握手言和，接受清廷复辟以换取北京承认阎锡山的老师赵戴文的督理职位。在目睹北伐与第四次直奉战争的灾难之后，山西两大铁腕人物誓要东山再起，一雪旧仇，但是山西的土地只能有一位领袖。"
@@ -596,28 +603,33 @@
  shx.QIE.aid.3.t:0 "北京在山西的利益（介绍）"
  shx.QIE.aid.3.d:0 "与太原之间的互动对于制定北京西翼的防御策略十分重要。虽然山西是一个赤贫而工业基础薄弱的省份，但阎锡山和冯玉祥都打算通过他们的“十年计划”调动他们所能运用的所有资源来建设一支能够再次挑战强权的军队。它涵盖了工业、农业和教育，除了其他与军事和社会相关的事项，山西还很有可能是你的眼中钉。他们将希望在无法避免的冲突中对抗奉天或潜在的南方威胁，并利用你的脆弱来打击你防御不足的西部。\n\n然而幸运的是，你的派系还是有一些手段来处理这些事情的。首先，山西经济的萎靡不振已经到了一个十分可笑的地步，他们可能要依靠外部投资来恢复到一个正常的状态。这为北京提供了一个扩大在山西的影响力的机会，一种以“北京影响力”等级衡量的资源（介于0到100%之间）。在山西那边，他们游戏早期的内容中给他们提供了许多用外部影响力增长来换取经济改善的机会。在你这一边，山西随着国策树进展，会（暂时）开放各种决议，让你的影响力深入他们的省份。\n\n这可以通过几种方式利用。山西会被动向你贡献民用工厂，且数量与你的影响力成正比。你也可以选择通过多种方式使用你的影响力。你还可以用你的特工去向着赵戴文（他和冯玉祥不同，他和他背后的阎锡山可以变成一个并不那么乐意的盟友）影响山西省政局，此外，降低他们的战争支持度将削弱他们背刺你的能力。在外交上，更高的影响力能在关于山西未来的谈判中给你解锁更多的关键选项，让你有可能驯服该省。\n\n在山西加大投资会使他们更强大，但要小心地将他们束缚起来。相反，你应该在脑海中牢记，忽略他们将会导致他们在未来成为一个（尽管较弱的）威胁。"
  shx.QIE.aid.3.a:0 "谢谢你的介绍！"
+ shx.QIE.aid.4.t:0 "太原的外来阴谋"
+ shx.QIE.aid.4.d:0 "俗话说有钱能使鬼推磨，山西督理对权钱游戏并不陌生。然而，有传言说有新面孔加入了这场游戏，在现存体系中建立了自己的恩庇网。北京的代理人无疑是在[QIE.GetNameDef]的授意下，打着“商业往来”的幌子进行着大量幕后交易。由于他们与我们相比坐拥更多资源，如果我们不对此加以限制，[SHX.GetLeader]的统治将变得岌岌可危。\n\n乐观人士说北京影响力的增长从长远来看是有益的，象征着双方紧密的合作关系。但他们对山西的一切包藏祸心，值得被怀疑。话虽如此，也少有人能抗拒来得如此便利的金钱的诱惑……"
+ shx.QIE.aid.4.a:0 "让北京有点影响也无妨，对吧？"
+ shx.QIE.aid.4.b:0 "给我狠狠地压制。"
  shx.QIE.aid.5.t:0 "黑色星期一救济一揽子协议"
  shx.QIE.aid.5.d:0 "虽然中国未遭黑色星期一太大的冲击，山西也因远离中国主要商业中心而未受太大影响，但这并不意味着世界经济衰退的余波没有波及太原。工人下岗，商品滞销，失业学者愈感不安。我们得做些什么来遏制下岗潮的灾难性影响，以免不满转变为愤怒。\n\n应对方案最近已经出现，国民大会通过了一项数额巨大的救济法案，以期减少黑色星期一对人民的影响。但这也引发了担忧。这一揽子方案附带了许多条件，虽然本质上是经济援助，其背后却充满了政治意味。不过，拒绝救助民众可能难以服众，经济专家正恳求督理批准这项方案。"
  shx.QIE.aid.5.a:0 "真是及时雨。"
  shx.QIE.aid.5.b:0 "我们能自己搞定！"
+ shx.QIE.aid.6.t:0 "北京商人收购公司"
+ shx.QIE.aid.6.d:0 "随着近期山西经济私有化的开展，大批投资商正赶来收购国有产业。这当然是把双刃剑，即便我们名义上继续持有这些资产的大部，当地私企被收购或被外部大企业超越的状况还是产生了下游效应。这些投资商吹嘘正是他们卓越的管理方法和技术能力，提高了山西商业和制造业的效率。但很多本地人不禁大呼上当。担心失去生计的小商人们团结在民族主义组织周围，而担心遭到远方的老板进一步压榨的工人们正寻求社会主义者的保护。\n\n人们纷纷向督理呼吁采取措施制止这些大企业的行为。内阁对此意见分歧很大，支持者指出提升效率正是政府一直放在第一位考虑的，更何况这些公司没干什么错事。其他人则对此事引发的动乱有所顾虑，更担心中央政府才是这些跨国集团背后的主子。最终，针对如何对待这些企业，内阁不情愿地作出了决定..."
+ shx.QIE.aid.6.a:0 "这是自由市场的解决方案！"
+ shx.QIE.aid.6.b:0 "贪得无厌的狗贼！"
+ shx.QIE.aid.12.t:0 "太原拒绝我们的示好"
+ shx.QIE.aid.12.d:0 "尽管我们尝试放下武器重归于好，山西方面却觉得我们近期改善关系的努力做得太过头了。据说，[SHX.GetLeader]政府已经打压了我方人员在山西省内的活动，使我们在太原建立活动网络的计划陷入部分停滞。\n\n在这拒绝行为背后，山西方面害怕进一步的合作关系会损害其主权完整，认为这无异于是在侮辱。但还好，即便受到山西秘密警察的干扰，我们还是与该地区建立了些许联系。这也提醒着我们山西督理的短视和自私。当下各路军阀的反复无常的确让人生厌，但我们不能因此消沉，而要保持干劲，将中国从沉沦中解救出来！"
+ shx.QIE.aid.12.a:0 "这仇，我们记下了。"
  shx.QIE.aid.13.t:0 "山西拒绝黑色星期一救济"
  shx.QIE.aid.13.d:0 "尽管我们尝试放下武器重归于好，山西方面却觉得我们近期改善关系的努力做得太过头了。据说，[SHX.GetLeader]政府拒绝了我们提供的黑色星期一救济金，婉拒说这笔钱最好由于其他更困难的省份。\n\n在这拒绝行为背后，山西方面害怕进一步的合作关系会损害其主权完整，认为这无异于是在侮辱。但还好，我们挽救了投入到该计划中的大部分资源，这也提醒着我们山西督理的短视和自私。当下各路军阀的反复无常的确让人生厌，但我们不能因此消沉，而要保持干劲，将中国从沉沦中解救出来！"
  shx.QIE.aid.13.a:0 "他们真是一如既往，把尊严放在人民之上。"
+ shx.QIE.aid.14.t:0 "太原叫停公司收购"
+ shx.QIE.aid.14.d:0 "尽管我们尝试放下武器重归于好，山西方面却觉得我们近期改善关系的努力做得太过头了。据说，[SHX.GetLeader]政府拒绝如承诺过的那样向投资商开放山西经济，大幅减少国有企业股票的出售，并对持有山西工厂设置限制。\n\n在这拒绝行为背后，山西方面害怕进一步的合作关系会损害其主权完整，认为这无异于是在侮辱。但还好，我们挽救了投入到该计划中的大部分资源，这也提醒着我们山西督理的短视和自私。当下各路军阀的反复无常的确让人生厌，但我们不能因此消沉，而要保持干劲，将中国从沉沦中解救出来！"
+ shx.QIE.aid.14.a:0 "这合法吗？"
 
  shx.suiyuan.campaign.60.t:0 "太原为西北暂停与我们合作"
  shx.suiyuan.campaign.60.d:0 "看来[SHX.GetLeader]并不怎么希望我们阻止他们进军西北。他们声称这份经过长时间讨论签订的条约有缺陷，指责我们不愿意帮他们重夺失去的（显然也是宝贵的）土地，表明我们并不打算认真承担自己的义务。\n\n他们很可能会选择靠自己的力量夺回西北。这是个愚蠢的决定，但也会让他们将注意力转移到这场草原上漫长的行动中去，从而无暇顾及我们。但从暂定条款中退出仍然等同于背叛，也许是时候将督理绳之以法了。"
  shx.suiyuan.campaign.60.a:0 "我们的话就是法律..."
  shx.suiyuan.campaign.60.b:0 "...而终有一天我们会强制执行。"
 
- shx.7.t:0 "冯玉祥走访榆林吸纳新兵"
- shx.7.d:0 "冯玉祥开展了他自我标榜的所谓“亲善之行”，带领他麾下的国民军和一队传教士穿过陕北的榆林。途中，他吸纳了那些自愿受洗成为基督徒的人加入国民军，并继续传播他的思想。这在一定程度上缓解了陕北地区的不安局势，不过这种影响最多只能解一时之急，因为冯玉祥的主要目标似乎是巩固自己在军队中的权力基础。"
- shx.7.a:0 "我们的军队已经够大了吧？"
- shx.8.t:0 "阎锡山向冯玉祥指出军队问题"
- shx.8.d:0 "阎锡山越发担心冯玉祥的政治野心，于是邀请他进行了一场私人会谈。两人开始激烈争辩，阎锡山要求国民军不能只忠于冯玉祥，也要忠于他自己；冯玉祥许诺道，国民军绝对是忠于阎锡山和山西省的，然后从会谈中抽身而去。"
- shx.8.a:0 "天下没有不散的筵席。"
- shx.10.t:0 "冯玉祥会见政府官员"
- shx.10.d:0 "冯玉祥最近在太原与省政府的一些官员进行了交流。看样子他似乎在为自己的激进理念寻求支持，虽然绝大多数人都把他的话当作耳边风，但还是有少数人认可他的想法。"
- shx.10.a:0 "冯玉祥不应该插足军队以外的事务。"
  shx.13.t:0 "晋西北农民抗议德国渗透"
  shx.13.d:0 "德国公司尝试在晋西北扩展采矿业务，但不出所料，他们遭到了当地人的反对。与晋南不同，晋北人的抵抗更加猛烈，并且成功阻止了德国公司的绝大多数行动。农民认为监管不力的阎锡山和省政府应该对此负责，愤怒的暴民已经开始动员自己的队伍了。"
  shx.13.a:0 "我们可能需要组建一支保安队……"
@@ -679,19 +691,6 @@
  shx.61.t:0 "冯玉祥在山西名望渐丰"
  shx.61.d:0 "冯玉祥近期的政治计划与运作产生了结果，从农民到地方官员，许多团体都已经对冯玉祥表示支持。如果这种趋势继续下去，冯玉祥必定能够取得政府的控制权，把他的老朋友阎锡山赶下宝座。"
  shx.61.a:0 "太难了……"
- shx.63.t:0 "冯玉祥和平政变"
- shx.63.d:0 "冯玉祥已经取得政府和军方的支持，并通过一场和平的政变控制了山西。阎锡山决定保全面子、优雅地退位，因为他认为冯对山西未来的愿景与他自己的非常相似（除了是个狂热的基督教信徒以外）。冯玉祥允许阎锡山继续担任顾问的职位，因为在山西未来必将面临的挑战中，阎锡山的洞察力很可能是不可或缺的。\n\n基督教传教士们举行了一场特别的仪式，数百人前来接受洗礼，这进一步巩固了冯玉祥在山西的基督徒基本盘。其中有一次，由于前来领洗的人太多，冯玉祥这位出了名的实用主义者建议直接打开消防水管“为众人行圣事”。他的传教士不赞成这种做法，不过这确实达到了预期的效果。历史将会记载，这位“基督将军”以及实用主义者将对山西乃至整个中国造成什么样的影响。"
- shx.63.a:0 "确实挺实用的……"
- shx.64.t:0 "冯玉祥想要组建联军"
- shx.64.d:0 "冯玉祥这位山西的国民军领袖向我们提出双方正式建立军事同盟。虽然他可能会成为一个可靠的盟友，但他也对他那什么属灵的目标太过于执着了，这可能会对中华大地的未来埋下祸根。"
- shx.64.a:0 "我们欣然接受。"
- shx.64.b:0 "怎么能信任洋教徒呢？"
- shx.65.t.accept:0 "[From.GetNameDefCap]接受联盟提议！"
- shx.65.d.accept:0 "[From.GetNameDefCap]同意与冯玉祥组成联军。"
- shx.65.a:0 "很好。"
- shx.65.t.refuse:0 "[From.GetNameDefCap]拒绝结盟"
- shx.65.d.refuse:0 "[From.GetNameDefCap]拒绝与冯玉祥结盟。"
- shx.65.b:0 "反正吃亏的是他们。"
  shx.401.t:0 "山西向德国请求武器援助"
  shx.401.d:0 "我们的外交官准备提交一份正式申请，要求德国通过输送军火的形式提供援助。如果德国人接受，就能为世人留下一种致力于中国的善政与和谐的印象。"
  shx.401.a:0 "我们将如虎添翼。"
@@ -733,7 +732,6 @@
  SHX_dare_to_die_corps_idea:0 "从敢死队中取得灵感"
  SHX_rural_economy:0 "乡村经济"
  SHX_construction_investments:0 "投资建设"
- SHX_christian_army:0 "基督军"
 
  SHX_neutrality:0 "山西中立政策"
  SHX_neutrality_desc:0 "山西群山环绕，周围的邻居都与其关系紧张，因此其领导层在政治和外交上深陷孤立主义。讽刺的是，在直系的惨胜下，正是山西高层这种长期闭关自守的心态给了他们一线生机。但是，这种地方主义也让人民对任何向外的干涉都不感兴趣，如果阎冯的志向不限于太原，就需要用一个共同的愿景来团结人民。"
@@ -854,6 +852,8 @@
  SHX_standardised_railway_gauges:0 "标准轨距"
  SHX_narrow_railway_gauges:0 "窄轨铁路"
  SHX_yan_xishan_thought:0 "阎锡山思想"
+ SHX_expanded_beijing_investment:0 "北京投资增加"
+ SHX_expanded_beijing_investment_desc:0 "山西开放外部投资的举措近来在一些方面取得了显著的成效，其中太原周边地区的发展尤为明显。外来投资者带来了必要的资金，以使太原市周边的许多私营企业得以启动，并为之前停滞不前的山西经济创造了一个持续的（尽管也可能是暂时的）增长期。"
 
  SHX_model_province_taiyuan:0 "模范省的心脏"
  SHX_model_province_taiyuan_desc:0 "太原是阎锡山政府的掌上明珠，长期受到省政府的高度偏爱。在我们的英明统治下，以进步改革为傲的太原已成为我省打造模范省形象以供他人膜拜的中心。"
@@ -875,25 +875,9 @@
  SHX_shanxi_yanchang_petroleum_concern:0 "延长石油公司"
  SHX_shanxi_yanchang_petroleum_concern_desc:0 "从陕西开采石油的计划最初在1903年由陕西人于颜彪、退休的德国水军提督康斯坦丁·冯·汉纳根和延长县县长郑明德提出，但是这个计划却被清政府否决了。经过了一段时间的搁置，陕西省政府筹集了资金以建立了国营的延长石油公司，并在后来的1905年被清政府认可为延安石油集团。在陕西官员的尽心竭力和阿部正野郎等外国专家的帮助下，中国内陆的第一家石油提炼厂成立了。\n\n日本的援助、投资和专家不断的流向陕西，延长县也随之因其高质量的石油和化工产品而闻名。尽管钻井工作遇到了一些问题，但是在1934年，国民军的过度开采加速了矿源的枯竭。如果我们想恢复开采，就必须做出新的努力。"
 
- SHX_Yan_Xishan_Schools:0 "在学校教授阎锡山思想"
- SHX_Discredit_Fengs_Religion:0 "发展阎锡山思想"
- SHX_Anti_Corruption_Army:0 "根除军中的腐败分子"
- SHX_Introduce_Western_Reforms:0 "引入西方改革"
- SHX_Adapt_Shanxi_Bureaucracy:0 "现代化山西官僚体系"
- SHX_Adapt_Shanxi_Military:0 "现代化山西军事结构"
- SHX_Christian_Schools:0 "建设基督教学校"
- SHX_Attack_Yan_Xishan_Thought:0 "鼓励冯玉祥的基督教思想"
- SHX_Install_Guominjun_Officers:0 "在军中安插国民军军官"
- SHX_Christian_Mission:0 "全面开始基督教传教活动"
- SHX_Install_Guominjun_Bureaucrats:0 "安插国民军官员"
- SHX_Guominjun_Dominate_the_Army:0 "确保国民军在军中的主导地位"
- SHX_Feng_Coup:0 "冯玉祥和平政变"
  SHX_Foreign_Policy_decisions:0 "外交政策"
  SHX_Attack_QIE:0 "攻击[FROM.GetFlag][FROM.GetNameDef]"
- SHX_Begin_The_Eastern_Expedition:0 "开始东征"
  SHX_Join_Faction:0 "加入[From.GetAdjective]联盟"
- SZC_Approach_The_Kuomintang:0 "接近[CHI.GetFlag]国民党"
- SZC_Approach_The_Federalists:0 "接近[GXC.GetFlag]联省派"
  SHX_Seize_Lanzhou:0 "夺取兰州"
  SHX_Integrate_Lanzhou:0 "整合兰州"
  SHX_can_modernise_1:0 "可以开始现代化进程。"
@@ -914,7 +898,6 @@
  SHX_small_militias_tooltip:0 "§G一支小规模的民兵部队将会应召捍卫家园！§!\n"
  SHX_Western_Reforms:0 "§G阎锡山将会根据对西方的学习来推动军队和政府改革，最终实现山西的完全现代化。将会开启更多关于落实西方改革的决议。§!"
  SHX_Christian_Mission_tol_desc:0 "§G冯玉祥元帅将会组织一场遍及全省的基督教传道活动，意在将他的理念以及他的国民军塑造为山西省的中坚力量。§!\n"
- SHX_Join_The_Fray_tooltip:0 "§R由于缺乏可能的盟友，这一国策目前不可用。§!"
  SHX_Yan_In_Power:0 "阎氏政权"
  SHX_Feng_in_power:0 "冯玉祥政权"
 
@@ -1214,60 +1197,22 @@
  SHX_military_science_desc:0 "我们应当深入研究军事科学，探究如何才能更好地提高山西的战斗力、打赢战争。"
  SHX_Connect_The_Villages:0 "连接村落"
  SHX_Connect_The_Villages_desc:0 "各种村落在山西星罗棋布，应该以现代基础设施将它们连通起来。"
- SHX_Mountain_Railways:0 "山地铁路"
- SHX_Mountain_Railways_desc:0 "山脉再也不是无法逾越的天堑了。窄轨铁路和其他技术都可以用来在山地连通各大城市。"
  SHX_Exploit_The_Western_Mines:0 "开发晋西矿山"
  SHX_Exploit_The_Western_Mines_desc:0 "晋西的矿产资源为山西带来了数不尽的财富。我们必须继续开发这里的资源，为山西的利益服务。"
  SHX_Expand_The_Coal_Fields:0 "扩建煤田"
  SHX_Expand_The_Coal_Fields_desc:0 "我们应该扩展现有的煤矿，以更好地利用丰富的天然资源。"
  SHX_Fund_Factory_Construction:0 "资助工厂建设"
  SHX_Fund_Factory_Construction_desc:0 "我们需要培育新型企业和小企业，为其提供激励措施，鼓励它们投资工厂建设。"
- SHX_Attract_Foreign_Investment:0 "吸引外资"
- SHX_Attract_Foreign_Investment_desc:0 "我们应该吸引外国投资者投资山西经济。不管怎么说，合作都是要比剥削来得强的。"
  SHX_Rural_Economy:0 "乡村经济"
  SHX_Rural_Economy_desc:0 "山西应该学会依靠乡村地区的支持。让乡村产业来支配省内经济吧。"
- SHX_Irrigation_Projects:0 "灌溉工程"
- SHX_Irrigation_Projects_desc:0 "现在我们正努力实现山西的繁荣，同时也应该启动灌溉计划来提高农作物产量。"
- SHX_Promote_Grain_Production:0 "促进粮食生产"
- SHX_Promote_Grain_Production_desc:0 "粮食生产对社会的正常运转而言至关重要，因为制作各种主食都需要粮食。我们应该鼓励省内的粮食生产。"
  SHX_Ban_The_Opium_Trade:0 "禁绝鸦片贸易"
  SHX_Ban_The_Opium_Trade_desc:0 "鸦片是西方帝国主义列强为征服中国而引入的，是一种毒害中国几十年的邪恶危险的毒品。为了遏制山西的大烟成瘾现象，我们必须禁绝鸦片贸易。"
  SHX_Rural_Investments:0 "投资乡村"
  SHX_Rural_Investments_desc:0 "我们应该投资乡村地带，来促进农业生产和乡村社区的活跃。"
  SHX_Industrial_Innovation:0 "工业创新"
  SHX_Industrial_Innovation_desc:0 "创新对正在进行工业化的国家而言十分重要，我们绝不能对此视而不见。我们应该寻求通过更加创新的手段实现生产能力的最大化。"
- SHX_Rebuild_The_Guominjun:0 "重建国民军"
- SHX_Rebuild_The_Guominjun_desc:0 "虽然现在国民军执掌大权，但它实际上不过是一群有中央指挥的土匪。我们应该把国民军改组成一支真正的军队，一支不容小觑的军队。"
- SHX_The_Christian_Army:0 "基督军"
- SHX_The_Christian_Army_desc:0 "国民军别号“基督军”，这是因为其意识形态中基督教价值观占到了主要成分。这支军队必将不负其名，将在全中国传播基督教和民族主义价值观作为首要目标。"
- SHX_Christian_Officers:0 "美国顾问"
- SHX_Christian_Officers_desc:0 "冯玉祥利用他与传教士的联系找到了几位美国顾问来帮他建立新军。尽管自1898年美西战争以来美国一场对外战争都没有打过，但他们总是会有一些经验能与我们分享的。"
- SHX_Army_Chaplains:0 "随军牧师"
- SHX_Army_Chaplains_desc:0 "冯玉祥计划将一批牧师编入军队，以确保军队的士气不会动摇，让士兵们时刻意识到他们在为何而战。"
- SHX_Christian_Soldiers:0 "基督兵"
- SHX_Christian_Soldiers_desc:0 "我们应该激励麾下士兵为主现身，为我们在中国传播基督教和民族主义的事业献身。冯玉祥甚至还为士兵们创作了一首战歌，让他们可以在准备作战时高歌一曲。"
- SHX_Fengs_Crusade:0 "国民军圣战"
- SHX_Fengs_Crusade_desc:0 "许多人都知道冯玉祥有着巨大的野心，他计划将自己的触角伸向中国其他地区，一些人称之为“冯氏十字军”。我们将推翻伪帝和暴君，一举解放全中国！"
- SHX_Join_The_Fray:0 "插足乱局"
- SHX_Join_The_Fray_desc:0 "虽然冯玉祥是一位虔诚之人，但他也知道这个世界充满了黑暗和恐惧，仅凭一己之力无法与之抗衡。"
- SHX_Increase_Armament_Production:0 "提高军火生产"
- SHX_Increase_Armament_Production_desc:0 "我们需要增加军备生产以实现当前的目标和野心，这将成为我们的首要任务。"
- SHX_New_Rifles:0 "新式步枪"
- SHX_New_Rifles_desc:0 "我们应该使用新式步枪助力解放中国的大业。只能用陈旧的装备的军队是没法打仗的。"
  SHX_Mountain_Warfare:0 "山地战术"
  SHX_Mountain_Warfare_desc:0 "山西是一个多山的省份，我们必须学会如何在这种环境下打好仗。可以请有经验的登山者来教士兵如何更好地在山地作战。"
- SHX_Artillery_Improvements:0 "火炮更新换代"
- SHX_Artillery_Improvements_desc:0 "炮兵在中国打了不少胜仗。我们也应该组建自己的炮兵部队，赶上其他军阀的水平。"
- SHX_A_Refined_Force:0 "百炼精兵"
- SHX_A_Refined_Force_desc:0 "我们应该对官兵进行专门的军事教育，磨炼他们的能力，助力我们的解放战争。"
- SHX_Radio_Communications:0 "无线电通信"
- SHX_Radio_Communications_desc:0 "山西是个谜一样的地方，有丘陵、山脉和各种天险，这使作战单位之间的通信十分困难。但在无线电技术开始运用之后，我们的军队将能够更容易地进行中继通信，传令兵们也终于可以解放了。"
- SHX_Expand_The_Engineer_Corps:0 "扩编工程兵团"
- SHX_Expand_The_Engineer_Corps_desc:0 "山西有天险可凭，所以我们的军队很容易就能够找到有利的防御阵地。但这一点对周围的军阀而言也是一样的，扩大工程兵军团将使我们能够更好应对这种情况。"
- SHX_Recon_Unit_Training:0 "侦察单位训练"
- SHX_Recon_Unit_Training_desc:0 "为进一步提高国民军的作战能力，应加强其侦察训练。"
- SHX_New_Officer_Standards:0 "新式军官标准"
- SHX_New_Officer_Standards_desc:0 "对于一支像国民军这样庞大的军队而言，通过裙带关系升迁的军官已经不能胜任领导职责了。我们应该推行一个人人都应该遵守的新标准。"
  SHX_QIE_totalist:0 "山西"
  SHX_QIE_totalist_ADJ:0 "山西"
  SHX_QIE_totalist_DEF:0 "山西"
